--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -59,7 +59,7 @@ jobs:
                   migrate
           
       - run:
-          name: Deploy backend  
+          name: Deploy backend  and verify
           command: |
             echo "Triggering deployment..." 
             RESPONSE=$(curl -s -X POST \
@@ -70,9 +70,6 @@ jobs:
 
             DEPLOYMENT_ID=$(echo "$RESPONSE" | jq -r '.deployment.id')
             echo "Triggered deployment ID: $DEPLOYMENT_ID"
-      - run:  
-          name: Verify Deployment
-          command: |
             echo "Verifying deployment status..."
             while true; do
                 STATUS=$(curl -s -H "Authorization: Bearer $SEVALLA_API_TOKEN" \
