--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
       - run:
           name: Run backend tests
           command: |
-            #npm test
+            #npm test .
 
   build-backend-image:
     docker:
