--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/jsonwebtoken": "^9.0.2",
     "@types/multer": "^2.0.0",
     "@types/node": "^20.5.1",
+    "@types/pg": "^8.15.6",
     "@types/streamifier": "^0.1.2",
     "@types/supertest": "^2.0.12",
     "jasmine": "^4.6.0",
