--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "storefront-backend",
   "version": "1.0.0",
   "description": "Storefront backend (Node/Express/TypeScript) with Cloudinary image uploads, Postgres, JWT auth, RBAC, and tests",
-  "main": "dist/server.js",
+  "main": "dist/src/server.js",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "build": "tsc",
