--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "build": "tsc",
     "start": "node dist/src/server.js",
-    "test": "jasmine"
+    "test": "jasmine  --config=jasmine.json"
   },
   "author": "",
   "license": "MIT",
