--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "build": "tsc",
-    "start": "node dist/src/server.js",
+    "start": "node --max-http-header-size=16384 dist/src/server.js",
     "test": "jasmine  --config=jasmine.json"
   },
   "author": "",
